--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 layout: default
 title: Backgammon Network
 ---
+# Coming soon...
+## Latest news
+<news-feed url="https://blog.bkgmn.net/feed.xml">Loading...</news-feed>
