--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: default
 title: Backgammon Network
 ---
-# Coming soon...
-## Latest news
+<h1>Coming soon...</h1>
+<h2>Latest news</h2>
 <news-feed url="https://blog.bkgmn.net/feed.xml">Loading...</news-feed>
